# agentic-sandbox-kit

./: Dockerfile  Makefile  README.md  attacks.jsonl  docker-compose.yml  policies.example.yaml  pyproject.toml  run_api.sh  test_policy.py  test_sandbox_path.py  test_tokens.py
agentic-sandbox-kit/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
agentic-sandbox-kit/configs/: config.example.json
agentic-sandbox-kit/docs/: ADDING_A_PROVIDER.md  ADDING_TOOLS.md  QUICK_DEMO_DATA.md  TRACE_SCHEMA.md
agentic-sandbox-kit/evals/datasets/: smoke.jsonl
agentic-sandbox-kit/scenarios/: demo.json  rag_style.json
agentic-sandbox-kit/src/agentic_sandbox_kit/: cli.py
agentic-sandbox-kit/src/agentic_sandbox_kit/core/: agent.py  messages.py  sandbox.py  tools.py  tracing.py
agentic-sandbox-kit/src/agentic_sandbox_kit/evals/: harness.py  metrics.py
agentic-sandbox-kit/src/agentic_sandbox_kit/providers/: base.py  factory.py  mock.py
agentic-sandbox-kit/src/agentic_sandbox_kit/tools/: __init__.py  calc.py  echo.py  files.py  note.py
agentic-sandbox-kit/src/agentic_sandbox_kit/trace/: report.py
agentic-sandbox-kit/tests/: test_calc.py  test_eval_harness.py  test_workspace_policy.py
